--- a/src/index.css
+++ b/src/index.css
@@ -13,14 +13,15 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  max-width: 1920px;
-  margin: 0 auto;
 }
 
 body {
-  margin: 0;
   display: flex;
-  place-items: center;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  max-width: 1920px;
+
   min-width: 320px;
   min-height: 100vh;
   background-color: rgba(0, 0, 0, 0.72);
