--- a/src/atom/ToggleButton/ToggleButton.module.css
+++ b/src/atom/ToggleButton/ToggleButton.module.css
@@ -1,25 +1,54 @@
 .toggle__btn_container {
-  width: 32px;
-  height: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.container_md {
+    width: 32px;
+    height: 32px;
 }
 .toggle__btn {
-  appearance: none;
-  background-color: rgba(255, 255, 255, 0.8);
-  width: 18px;
-  height: 9px;
-  border-radius: 9999px;
-  position: relative;
+    appearance: none;
+    border-block-style: none;
+    background-color: rgba(255, 255, 255, 0.8);
+
+    border-radius: 9999px;
+    position: relative;
+    border: 0;
+    outline: 0;
 }
 .toggle__btn::after {
-  content: "";
-  position: absolute;
-  top: 0.75px;
-  right: 0.75px;
-  width: 7.5px;
-  height: 7.5px;
-  border-radius: 100%;
-  background-color: #000;
+    content: "";
+    position: absolute;
+
+    border-radius: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.container_lg {
+    width: 40px;
+    height: 32px;
+}
+
+.btn_md {
+    width: 18px;
+    height: 9px;
+}
+.btn_md::after {
+    top: 0.75px;
+    right: 0.75px;
+    width: 7.5px;
+    height: 7.5px;
+}
+
+.btn_lg {
+    width: 24px;
+    height: 12px;
+}
+
+.btn_lg::after {
+    top: 1px;
+    right: 1px;
+    width: 10px;
+    height: 10px;
 }
