--- a/src/components/sections/DistanceSection/DistanceSection.module.css
+++ b/src/components/sections/DistanceSection/DistanceSection.module.css
@@ -1,16 +1,16 @@
-.move_section__container {
+.section__container {
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-top: 16px;
+    margin-top: 8px;
 }
-.move_section_heading_container {
+.section_heading_container {
     max-width: 36px;
     min-height: 32px;
     display: flex;
     align-items: center;
 }
-.move_section_input_container {
+.section_input_container {
     display: flex;
     flex-wrap: wrap;
 }
