--- a/src/components/sections/SkewSection/SkewSection.module.css
+++ b/src/components/sections/SkewSection/SkewSection.module.css
@@ -1,16 +1,16 @@
-.move_section__container {
+.skew_section__container {
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-top: 16px;
 }
-.move_section_heading_container {
+.skew_section_heading_container {
     max-width: 36px;
     min-height: 32px;
     display: flex;
     align-items: center;
 }
-.move_section_input_container {
+.skew_section_input_container {
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    column-gap: 22px;
 }
