--- a/src/atom/Input/Input.module.css
+++ b/src/atom/Input/Input.module.css
@@ -1,9 +1,10 @@
 .text_input {
-  display: flex;
-  padding: 4px;
-  background-color: transparent;
-  outline: none;
-  border: none;
-  max-width: 40px;
-  min-width: 16px;
+    display: flex;
+    padding: 4px;
+    background-color: transparent;
+    outline: none;
+    border: none;
+    max-width: 40px;
+    overflow: hidden;
+    min-width: 16px;
 }
