--- a/src/atom/ToggleButton/ToggleButton.module.css
+++ b/src/atom/ToggleButton/ToggleButton.module.css
@@ -11,6 +11,7 @@
     appearance: none;
     border-block-style: none;
     background-color: rgba(255, 255, 255, 0.8);
+    cursor: pointer;
 
     border-radius: 9999px;
     position: relative;
