--- a/src/components/sections/PerspectiveSection/PerspectiveSection.module.css
+++ b/src/components/sections/PerspectiveSection/PerspectiveSection.module.css
@@ -2,14 +2,21 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-top: 8px;
+    /* margin-top: 8px; */
 }
 .section_heading_container {
-    max-width: 36px;
     min-height: 32px;
     display: flex;
     align-items: center;
+    max-width: 133px;
+    margin-bottom: 8px;
 }
 .section_input_container {
     display: flex;
+    column-gap: 16px;
+}
+
+.input_container {
+    display: flex;
+    flex-direction: column;
 }
