--- a/src/molecule/PerspectiveOriginBox/PerspectiveOriginBox.module.css
+++ b/src/molecule/PerspectiveOriginBox/PerspectiveOriginBox.module.css
@@ -4,32 +4,36 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 }
 
 .inner_container {
     width: 64px;
     height: 64px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.box_row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .svg_btn {
     display: flex;
     width: 8px;
     height: 8px;
-    position: absolute;
-}
-.top_left {
-    top: 0;
-    left: 0;
+    cursor: pointer;
 }
 
-.top_middle {
-    top: 0;
-    left: 0;
-    transform: translate(50%, 0%);
-}
-
-.top_right {
-    top: 0;
-    right: 0;
+.svg_plus_icon {
+    display: flex;
+    width: 24px;
+    height: 24px;
+    align-items: center;
+    justify-content: center;
 }
