--- a/src/molecule/TextIconButton/TextIconButton.module.css
+++ b/src/molecule/TextIconButton/TextIconButton.module.css
@@ -6,6 +6,7 @@
     padding-bottom: 4px;
     max-width: 224px;
     min-height: 32px;
+    cursor: pointer;
 }
 .text_icon_button_content_container {
     display: flex;
